# claritydesk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-mcp.txt  requirements.txt
demo/: run_demo.py
demo/showcase/: report.html  report.json  report.md
docs/: ARCHITECTURE.md  SECURITY.md  _perm_check.md  ci-workflow.yml
examples/: generate_sample.py
src/claritydesk/: __init__.py  alt_text.py  cli.py  mcp_server.py  models.py  orchestrator.py  pdf_utils.py  report.py  security.py
src/claritydesk/agents/: __init__.py  remediation_agent.py  scanning_agent.py  verification_agent.py
src/claritydesk/wcag/: __init__.py  rules.py
tests/: test_pipeline.py
