[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claritydesk"
version = "0.1.0"
description = "Multi-agent WCAG/ADA accessibility auditor and remediator for SMB documents (plan → act → verify)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ClarityDesk" }]
keywords = ["accessibility", "wcag", "ada", "section508", "pdf", "remediation", "agents", "mcp"]
dependencies = [
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
vision = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
claritydesk = "claritydesk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
